Enfin une voix acceptable ! La voix est générer par Pico2wav (voix android ou google). De plus la lecture ce fait grace à VoX (voir README.md). Ajout d'une class fonction qui contient pour l'instant la fonction say() qui permet à Lea de parler.

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="/home/yann/workspace/Lea-asr/src/lib/jsapi.jar"/>
 	<classpathentry kind="lib" path="/home/yann/workspace/Lea-asr/src/lib/junit-4.8.1.jar"/>
 	<classpathentry kind="lib" path="/home/yann/workspace/Lea-asr/src/lib/sphinx4.jar"/>
+	<classpathentry kind="lib" path="/home/yann/workspace/Lea-asr/src/lib/Shell.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
